--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        const rock = 1;
+        const paper = 2;
+        const scissors = 3;
+    </script>
 </body>
 </html>
