--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         const rock = 1;
         const paper = 2;
         const scissors = 3;
+        let randomNumber = Math.floor(Math.random()*3)+1;
+        console.log(randomNumber);
     </script>
 </body>
 </html>
