Change constant values to strings

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <script>
-        const rock = 1;
-        const paper = 2;
-        const scissors = 3;
+        const rock = "Rock";
+        const paper = "Paper";
+        const scissors = "Scissors";
+        console.log(scissors);
         let randomNumber = Math.floor(Math.random()*3)+1;
-        console.log(randomNumber);
+        //console.log(randomNumber);
+
     </script>
 </body>
 </html>
