--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
     let randomNumber = Math.floor(Math.random()*3)+1;
     //console.log(randomNumber);
     let computerChoice;
-   // function getComputerChoice () {
+    
+    function getComputerChoice () {
         if(randomNumber === 1) {
             computerChoice = rock;
-            console.log(computerChoice);
+            //console.log(computerChoice);
         }
         else if(randomNumber === 2) {
             computerChoice = paper;
-            console.log(computerChoice);
+            //console.log(computerChoice);
         }
         else {
             computerChoice = scissors;
-            console.log(computerChoice);
+            //console.log(computerChoice);
         }
-   // }
-    
+   }
+   console.log(computerChoice);
+
 </script>
 </html>
