Assign computerChoice to const computerSelection

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     let computerChoice;
 
     function getComputerChoice () {
-        //let computerChoice;
-
+        //let computerChoice = 0;
         if(randomNumber === 1) {
             return computerChoice = rock;
             //console.log(computerChoice);
@@ -33,7 +32,14 @@
             //console.log(computerChoice);
         } 
    }
+   //const computerSelection = computerChoice;
+   //console.log(computerChoice);
+
    console.log(getComputerChoice(computerChoice));
+   
+   const computerSelection = computerChoice;
+   console.log(computerSelection);
+   //let playerSelection = prompt("Rock Paper Scissors: ");
 
 </script>
 </html>
