Change variable name from playerSelection to userInput

--- a/index.html
+++ b/index.html
@@ -31,15 +31,23 @@
            return computerChoice = scissors;
             //console.log(computerChoice);
         } 
-   }
-   //const computerSelection = computerChoice;
-   //console.log(computerChoice);
+    }
 
-   console.log(getComputerChoice(computerChoice));
+    console.log(getComputerChoice(computerChoice));
    
-   const computerSelection = computerChoice;
-   console.log(computerSelection);
-   //let playerSelection = prompt("Rock Paper Scissors: ");
+    const computerSelection = computerChoice;
+    console.log(computerSelection);
+
+    let userInput = prompt("Rock Paper Scissors: ");
+   
+    // function caseCorrect(userInput) {
+    //     let char1 = userInput.charAt(0);
+    //     let char2 = char1.toUpperCase();
+    //     let lowerCaseText1 = userInput.slice(1);
+    //     let lowerCaseText2 = lowerCaseText1.toLowerCase();
+    //     return char2+lowerCaseText2;
+    // }
+    // console.log(caseCorrect(userInput));
 
 </script>
 </html>
