--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
     let userInput = prompt("Rock Paper Scissors: ");
    
-    // function caseCorrect(userInput) {
-    //     let char1 = userInput.charAt(0);
-    //     let char2 = char1.toUpperCase();
-    //     let lowerCaseText1 = userInput.slice(1);
-    //     let lowerCaseText2 = lowerCaseText1.toLowerCase();
-    //     return char2+lowerCaseText2;
-    // }
-    // console.log(caseCorrect(userInput));
+    function caseCorrect(userInput) {
+        let char1 = userInput.charAt(0);
+        let char2 = char1.toUpperCase();
+        let lowerCaseText1 = userInput.slice(1);
+        let lowerCaseText2 = lowerCaseText1.toLowerCase();
+        return char2+lowerCaseText2;
+    }
+    console.log(caseCorrect(userInput));
 
 </script>
 </html>
