Assign caseCorrect(userInput) to const playerSelection

--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
         let lowerCaseText1 = userInput.slice(1);
         let lowerCaseText2 = lowerCaseText1.toLowerCase();
         return char2+lowerCaseText2;
+        
     }
     console.log(caseCorrect(userInput));
+
+    const playerSelection = caseCorrect(userInput);
+    console.log(playerSelection);
 
 </script>
 </html>
