Declare win, lose and draw variables

--- a/index.html
+++ b/index.html
@@ -53,5 +53,10 @@
     const playerSelection = caseCorrect(userInput);
     console.log(playerSelection);
 
+    let winGame;
+    let loseGame;
+    let drawGame;
+    
+
 </script>
 </html>
