Declare first loseGame if statement

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         // else if playerSelection gets rock and computerChoice gets paper
         // lose = "You lose! Paper beats Rock."
         // Return lose
-        // else if (playerSelection === "Rock" && computerSelection === "Paper") {
-        //     loseGame = "You lose! Paper beats Rock.";
-        //     return loseGame;
-        // }
+        else if (playerSelection === "Rock" && computerSelection === "Paper") {
+            loseGame = "You lose! Paper beats Rock.";
+            return loseGame;
+        }
         // // or if playerSelection gets paper and computerChoice gets scissors
         // // lose = "You lose! Scissors beats Paper."
         // // Return lose
