--- a/index.html
+++ b/index.html
@@ -71,11 +71,17 @@
         // // or if playerSelection gets paper and computerChoice gets scissors
         // // lose = "You lose! Scissors beats Paper."
         // // Return lose
-        // else if (playerSelection === "Paper" && computerChoice === "Scissors") {
-        //     loseGame = "You lose! Scissors beats Paper.";
+        else if (playerSelection === "Paper" && computerChoice === "Scissors") {
+            loseGame = "You lose! Scissors beats Paper.";
+            return loseGame;
+        }
+        // if playerSelection gets scissors and computerChoice gets rock
+        // lose = "You lose! Rock beats Scissors."
+        // Return lose
+        // else if (playerSelection === "Scissors" && computerChoice === "Rock") {
+        //     loseGame = "You lose! Rock beats Scissors.";
         //     return loseGame;
         // }
-
     }
     console.log(playRound(drawGame));
     console.log(playRound(loseGame));
