Insert strict equality operator to drawGame

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         // if playerSelection equals computerChoice
         // draw = "It's a tie."
         // Return draw
-        if (playerSelection == computerSelection) {
+        if (playerSelection === computerSelection) {
              drawGame = "It's a tie.";
              return drawGame;
         }
