Declare winCount & loseCount variables

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
     // Declare variable computerChoice
     let computerChoice;
 
+
+    // Declare winCount variable
+    // Declare loseCount variable
+    let winCount;
+    let loseCount;
+
     // Create getComputerChoice function
     // Assign randomNumber to it's designated constant and return its value:
     function getComputerChoice () {
@@ -138,6 +144,7 @@
     console.log(playRound(loseGame));
     console.log(playRound(winGame));
 
+    
 
 </script>
 </html>
