Declare drawCount variable

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     let winCount = 0;
     // Declare loseCount variable
     let loseCount = 0;
+    // Declare drawCount variable
+    let drawCount = 0;
 
    
     // Create new function called game() to play 5 rounds using playRound function
