--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
             function playRound() {
                 // if playerSelection equals computerChoice
                 // drawGame = "It's a tie."
+                // Each time drawGame variable is returned increment drawCount by 1
                 // Return drawGame
+                // Return drawCount
                 if (playerSelection === computerSelection) {
                     drawGame = "It's a tie.";
                     drawCount++;
@@ -113,16 +115,20 @@
                 }
                 // else if playerSelection gets rock and computerChoice gets paper
                 // loseGame = "You lose! Paper beats Rock."
+                // Each time loseGame variable is returned increment loseCount by 1
                 // Return loseGame
+                // Return loseCount
                 else if (playerSelection === "Rock" && computerSelection === "Paper") {
                     loseGame = "You lose! Paper beats Rock.";
                     loseCount++;
                     return loseGame;
                     return loseCount;
                 }
-                //  or if playerSelection gets paper and computerChoice gets scissors
-                //  loseGame = "You lose! Scissors beats Paper."
-                //  Return loseGame
+                // or if playerSelection gets paper and computerChoice gets scissors
+                // loseGame = "You lose! Scissors beats Paper."
+                // Each time loseGame variable is returned increment loseCount by 1
+                // Return loseGame
+                // Return loseCount
                 else if (playerSelection === "Paper" && computerChoice === "Scissors") {
                     loseGame = "You lose! Scissors beats Paper.";
                     loseCount++;
@@ -131,7 +137,9 @@
                 }
                 // or if playerSelection gets scissors and computerChoice gets rock
                 // loseGame = "You lose! Rock beats Scissors."
+                // Each time loseGame variable is returned increment loseCount by 1
                 // Return loseGame
+                // Return loseCount
                 else if (playerSelection === "Scissors" && computerChoice === "Rock") {
                     loseGame = "You lose! Rock beats Scissors.";
                     loseCount++;
@@ -140,6 +148,8 @@
                 }
                 // if playerSelection gets rock and computerChoice gets scissors
                 // winGame = "Winner, winner, chicken dinner! Rock beats Scissors."
+                // Each time winGame variable is returned increment winCount by 1
+                // Return winGame
                 // Return winGame
                 else if (playerSelection === "Rock" && computerSelection === "Scissors") {
                     winGame = "Winner, winner, chicken dinner! Rock beats Scissors.";
@@ -149,6 +159,8 @@
                 }
                 // or if playerSelection gets paper and computerChoice gets rock
                 // winGame = "Winner, winner, chicken dinner! Paper beats Rock."
+                // Each time winGame variable is returned increment winCount by 1
+                // Return winGame
                 // Return winGame
                 else if (playerSelection === "Paper" && computerChoice === "Rock") {
                     winGame = "Winner, winner, chicken dinner! Rock beats Scissors.";
@@ -158,6 +170,8 @@
                 }
                 // or if playerSelection gets scissors and computerChoice gets paper
                 // winGame = "Winner, winner, chicken dinner! Scissors beats Paper."
+                // Each time winGame variable is returned increment winCount by 1
+                // Return winGame
                 // Return winGame
                 else if (playerSelection === "Scissors" && computerChoice === "Paper") {
                     winGame = "Winner, winner, chicken dinner! Rock beats Scissors.";
@@ -170,15 +184,25 @@
             // console.log(playRound(loseGame));
             // console.log(playRound(winGame));
 
-            // do {
-            //     winCount++;
-            // }
         }
         
     // }
 
-    console.log(winCount);
-    console.log(loseCount);
+    // console.log(winCount);
+    // console.log(loseCount);
+
+    // Report overall winner or loser at the end
+    console.log("Results out of 5 games:\nWins: " + winCount + "\nLoses: " + loseCount + "\nDraws: " + drawCount);
+    
+    if (winCount > loseCount) {
+        console.log("Well done! You are the overall champ!");
+    }
+    else if (winCount < loseCount) {
+        console.log("Bad luck. You are the overall loser!");
+    }
+    else {
+        console.log("Interesting...overall it's a draw!");
+    }
 
 </script>
 </html>
