Create for loop

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 // This came out of for loop
 
  // Create for loop to increment up by 1 while less than 5
-//  for (let i = 0; i < 5; i++) { 
+ for (let i = 0; i < 5; i++) { 
 
             // Declare a random number variable - randomNumber
             // Randomly select 1 of 3 variables 
@@ -201,8 +201,8 @@
 
     // console.log(winCount);
     // console.log(loseCount);
-    
-    // }
+
+    }
     // Report overall winner or loser at the end
     console.log("Results out of 5 games:\nWins: " + winCount + "\nLoses: " + loseCount + "\nDraws: " + drawCount);
     
