Call getComputerChoice function

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 //console.log(computerChoice);
             } 
         }
-        console.log(getComputerChoice());
+        getComputerChoice();
+        // console.log(getComputerChoice());
             
         // Declare const computerSelection = computerChoice
         const computerSelection = computerChoice;
