--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             for (let i = 0; i < 5; i++) {
                 getComputerChoice();
                 const computerSelection = computerChoice;
-                console.log(computerSelection);
+                // console.log(computerSelection);
                 getUserInput();
                 const playerSelection = getUserInput(userInput);
-                console.log(playerSelection);
+                // console.log(playerSelection);
                 playRound();
                 console.log(playRound(computerSelection, playerSelection));
             }
