--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
    
+    <button id="Rock" class="btn">Rock</button>
+    <button id="Paper" class="btn">Paper</button>
+    <button id="Scissors" class="btn">Scissors</button>
+
 </body>
 </html>
