Create player score & computer score divs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
    
+    <div id="playerScore"></div>
+    <div id="computerScore"></div>
+
     <button id="Rock" class="btn">Rock</button>
     <button id="Paper" class="btn">Paper</button>
     <button id="Scissors" class="btn">Scissors</button>
