Create output div

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <button id="Paper" class="btn">Paper</button>
     <button id="Scissors" class="btn">Scissors</button>
 
+    <div id="output"></div>
+
 </body>
 </html>
