Create two extra divs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <button id="Scissors" class="btn">Scissors</button>
 
     <div id="output"></div>
+    <div id="outputReport"></div>
+    <div id="outputEndGame"></div>
 
 </body>
 </html>
