--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
    
-    <div id="playerScore"></div>
-    <div id="computerScore"></div>
+    <div id="player-score"></div>
+    <div id="computer-score"></div>
 
     <button id="Rock" class="btn">Rock</button>
     <button id="Paper" class="btn">Paper</button>
     <button id="Scissors" class="btn">Scissors</button>
 
     <div id="output"></div>
-    <div id="outputReport"></div>
-    <div id="outputEndGame"></div>
+    <div id="output-report"></div>
+    <div id="output-end-game"></div>
 
 </body>
 </html>
