--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   
+    <h1>Rock||Paper||Scissors</h1>
+    <h2>Best out of 5 wins!</h2>
+
     <div id="player-score"></div>
     <div id="computer-score"></div>
 
