Move buttons into div

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <div id="player-score"></div>
     <div id="computer-score"></div>
 
-    <button id="Rock" class="btn">Rock</button>
-    <button id="Paper" class="btn">Paper</button>
-    <button id="Scissors" class="btn">Scissors</button>
+    <div class="buttons">
+        <button id="Rock" class="btn">Rock</button>
+        <button id="Paper" class="btn">Paper</button>
+        <button id="Scissors" class="btn">Scissors</button>
+    </div>
 
     <div id="output"></div>
     <div id="output-report"></div>
