--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock|Paper|Scissors</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap">
 </head>
 <body>
     <h1>Rock||Paper||Scissors</h1>
