Create container div

--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap">
 </head>
 <body>
-    <h1>Rock||Paper||Scissors</h1>
-    <h2>Best out of 5 wins!</h2>
+    <div class="container">
 
-    <div id="player-score"></div>
-    <div id="computer-score"></div>
+        <h1>Rock||Paper||Scissors</h1>
+        <h2>Best out of 5 wins!</h2>
 
-    <div class="buttons">
-        <button id="Rock" class="btn">Rock</button>
-        <button id="Paper" class="btn">Paper</button>
-        <button id="Scissors" class="btn">Scissors</button>
+        <div class="scores">
+            <div id="player-score"></div>
+            <div id="computer-score"></div>
+        </div>
+
+        <div class="buttons">
+            <button id="Rock" class="btn">Rock</button>
+            <button id="Paper" class="btn">Paper</button>
+            <button id="Scissors" class="btn">Scissors</button>
+        </div>
+
+        <div id="output"></div>
+        <div id="output-report"></div>
+        <div id="output-end-game"></div>
+        
     </div>
-
-    <div id="output"></div>
-    <div id="output-report"></div>
-    <div id="output-end-game"></div>
+    
 
 </body>
 </html>
