Create countdown div

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <div id="output"></div>
         <div id="output-report"></div>
         <div id="output-end-game"></div>
-        
+
+        <div id="countdown"></div>
+
+        <!-- <progress value="0" max="5" id="progressBar"></progress> -->
+
     </div>
     
 
